Filtering fields based on parent for testCase